--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,7 +13,7 @@
 .header-font(){
 color: @header-font-color;
 font-size: 4rem;
-margin:2%;
+margin:5% 0% 2% 0%;
 
 }
 
