--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,8 +4,10 @@
     display:flex;
     flex-direction:column;
     align-items: center;
+    
     h1{
         .header-font()
+      
     }//h1
 
     nav{
@@ -13,6 +15,9 @@
         width: 85%;
         justify-content: space-evenly;
         .nav-item();
+        position:fixed;
+        background-color: rgba(127, 255, 212, 0.432);
+        padding:1%;
 
         a {
             text-decoration: none;
